# colorant

./: Cargo.toml  README.md  build.sh
src/: capture.rs  colorant.rs  config.rs  fov_window.rs  lib.rs  main.rs  mouse.rs
